--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "veggie-system-fe",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
@@ -40,6 +40,7 @@
         "recharts": "2",
         "redux": "^5.0.1",
         "redux-persist": "^6.0.0",
+        "yarn": "^1.22.22",
         "yup": "^1.4.0"
     },
     "devDependencies": {
@@ -55,6 +56,7 @@
         "@typescript-eslint/eslint-plugin": "^7.2.0",
         "@typescript-eslint/parser": "^7.2.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8.57.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "^18.0.0",
@@ -72,10 +74,10 @@
         "prop-types": "^15.8.1",
         "stylelint": "^16.2.1",
         "stylelint-config-standard-scss": "^13.0.0",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5.4.2",
         "vite": "^5.1.6",
         "vite-tsconfig-paths": "^4.3.1",
         "vitest": "^1.3.1"
-    },
-    "packageManager": "yarn@4.1.1"
+    }
 }
