--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@mantine/modals": "^7.15.1",
         "@reduxjs/toolkit": "^2.2.3",
         "@tabler/icons-react": "^3.1.0",
+        "@tanstack/react-query": "^5.64.0",
         "axios": "^1.6.8",
         "dayjs": "^1.11.10",
         "i18next": "^23.10.1",
@@ -44,6 +45,7 @@
         "yup": "^1.4.0"
     },
     "devDependencies": {
+        "@tanstack/react-query-devtools": "^5.64.0",
         "@testing-library/dom": "^9.3.4",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
