--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "@mantine/form": "^7.7.1",
         "@mantine/hooks": "^7.7.1",
         "@mantine/modals": "^7.15.1",
+        "@mantine/notifications": "^7.15.3",
         "@reduxjs/toolkit": "^2.2.3",
         "@tabler/icons-react": "^3.1.0",
         "@tanstack/react-query": "^5.64.0",
+        "@types/react-query": "^1.2.9",
         "axios": "^1.6.8",
         "dayjs": "^1.11.10",
         "i18next": "^23.10.1",
