--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "@types/react-query": "^1.2.9",
         "axios": "^1.6.8",
         "dayjs": "^1.11.10",
+        "echarts": "^5.6.0",
         "i18next": "^23.10.1",
+        "lodash": "^4.17.21",
         "lottie-web": "^5.12.2",
         "mantine-form-yup-resolver": "^2.0.0",
         "miragejs": "^0.1.48",
