--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mantine/charts": "^7.7.1",
         "@mantine/core": "^7.7.1",
         "@mantine/dates": "^7.7.1",
+        "@mantine/dropzone": "^7.16.0",
         "@mantine/form": "^7.7.1",
         "@mantine/hooks": "^7.7.1",
         "@mantine/modals": "^7.16.0",
