--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.1.0",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-lottie": "^1.2.4",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
