--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
         "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build"
     },
     "dependencies": {
-        "@mantine/charts": "^7.7.1",
-        "@mantine/core": "^7.7.1",
-        "@mantine/dates": "^7.16.2",
-        "@mantine/dropzone": "^7.16.0",
-        "@mantine/form": "^7.7.1",
-        "@mantine/hooks": "^7.7.1",
-        "@mantine/modals": "^7.16.0",
-        "@mantine/notifications": "^7.15.3",
+        "@mantine/charts": "7.17.8",
+        "@mantine/core": "7.17.8",
+        "@mantine/dates": "7.17.8",
+        "@mantine/dropzone": "7.17.8",
+        "@mantine/form": "7.17.8",
+        "@mantine/hooks": "7.17.8",
+        "@mantine/modals": "7.17.8",
+        "@mantine/notifications": "7.17.8",
         "@reduxjs/toolkit": "^2.2.3",
         "@tabler/icons-react": "^3.1.0",
         "@tanstack/react-query": "^5.64.0",
